# synergyway-test-task

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  uwsgi.ini
backend/app/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: migrate.py  mm.py  prod.py  server.py  wait-for-db.sh
backend/users/: models.py  urls.py
backend/users/api/: serializers.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/core/: Choice.css  Choice.js  Navbar.css  Navbar.js  NewUserDIalog.js
frontend/src/pages/: Groups.js  Users.js
