[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Oleh Pykulytsky <pykulytsky@gmail.com>"]
packages = [
    { include="scripts", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
djangorestframework = "^3.13.1"
psycopg2 = "^2.9.3"
django-environ = "^0.8.1"
uWSGI = "^2.0.20"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pytest-picked = "^0.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = 'scripts.server:main'
mm = 'scripts.mm:main'
migrate = 'scripts.migrate:main'
prod = 'scripts.prod:main'
